@@ -1,3 +1,11 @@
+Wed Dec  3 17:56:54 CET 2014 <Daniel.Diaz@univ-paris1.fr>
+
+	* fix a bug with Apple gcc (clang) on x86_64
+
+Fri Aug 22 15:10:18 CEST 2014 <Daniel.Diaz@univ-paris1.fr>
+
+	* allow to define more atoms with MAX_ATOM env var on 64 bits machines
+
 Wed Aug 13 11:25:18 CEST 2014 <Daniel.Diaz@univ-paris1.fr>
 
 	* fix a bug in bagof/3 when used as findall/3
